feat(i18n): migrate remaining pages to useTranslation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -359,6 +359,66 @@
     "subtitle": "Format and validate JSON data",
     "placeholder": "Paste JSON data here..."
   },
+  "regex_tester_page": {
+    "back": "Back to Developer Tools",
+    "title": "Regex Tester",
+    "subtitle": "Test and debug regular expressions easily",
+    "pattern_title": "Regex Pattern",
+    "pattern_desc": "Enter your regex pattern",
+    "test_label": "Test Text",
+    "regex_placeholder": "Enter regex pattern here...",
+    "text_placeholder": "Enter text to test...",
+    "test_button": "Test Regex",
+    "matches_title": "Matches Found: {{count}}",
+    "position": "Position: {{start}}-{{end}}",
+    "samples_title": "Common Patterns",
+    "samples_desc": "Click to copy",
+    "samples": {
+      "email": "Email",
+      "phone": "Phone",
+      "url": "URL",
+      "number": "Number",
+      "word": "Word",
+      "date": "Date"
+    },
+    "toasts": {
+      "error_title": "Error",
+      "no_pattern": "Please enter a regex pattern",
+      "success_title": "Done!",
+      "found": "{{count}} matches found",
+      "invalid": "Invalid regular expression"
+    }
+  },
+  "jwt_decoder_page": {
+    "back": "Back to Developer Tools",
+    "title": "JWT Decoder",
+    "subtitle": "Decode JWT tokens and view their contents",
+    "security_warning_title": "Security Warning",
+    "security_warning_desc": "Do not share real JWT tokens containing sensitive data. Use sample tokens only on public sites.",
+    "token_title": "JWT Token",
+    "token_desc": "Paste the token you want to decode",
+    "decode_button": "Decode JWT",
+    "header_title": "Header",
+    "header_desc": "Information about the algorithm and token type",
+    "payload_title": "Payload",
+    "payload_desc": "Data encoded in the token",
+    "signature_title": "Signature",
+    "signature_desc": "Digital signature (cannot be verified without the secret key)",
+    "copy_button": "Copy",
+    "toasts": {
+      "success_title": "Success!",
+      "success_desc": "JWT decoded successfully",
+      "copied_title": "Copied!",
+      "copied_desc": "{{type}} copied to clipboard",
+      "error": "Error decoding JWT - ensure the token is valid",
+      "invalid": "Invalid JWT token",
+      "no_token": "Please enter a JWT token",
+      "invalid_header": "Invalid JWT header",
+      "invalid_payload": "Invalid JWT payload",
+      "admin_warning": "Admin privileges token detected - verify the source",
+      "expired": "Token expired at {{date}}"
+    }
+  },
   "video_trimmer_page": {
     "back": "Back to Video Tools",
     "title": "Video Trimmer",
@@ -701,6 +761,19 @@
   },
   "common": {
     "explore": "Explore All Tools",
-    "moreTools": "+{{count}} more tools..."
+    "moreTools": "+{{count}} more tools...",
+    "back": "Back",
+    "back_home": "Back to Home",
+    "back_category": "Back to Category",
+    "use": "Use Tool",
+    "download": "Download",
+    "copy": "Copy",
+    "reset": "Reset",
+    "generate": "Generate",
+    "upload": "Upload",
+    "save": "Save",
+    "cancel": "Cancel",
+    "success": "Success!",
+    "error": "Error"
   }
 }
