--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -352,12 +352,74 @@
   "html_formatter_page": {
     "title": "HTML Formatter",
     "subtitle": "Format and clean up HTML code automatically",
-    "placeholder": "Paste HTML code here..."
+    "placeholder": "Paste HTML code here...",
+    "error": "Error formatting HTML"
   },
   "json_formatter_page": {
     "title": "JSON Formatter",
     "subtitle": "Format and validate JSON data",
-    "placeholder": "Paste JSON data here..."
+    "placeholder": "Paste JSON data here...",
+    "error": "Invalid JSON - check syntax"
+  },
+  "regex_tester_page": {
+    "back": "Back to Developer Tools",
+    "title": "Regex Tester",
+    "subtitle": "Test and debug regular expressions easily",
+    "pattern_title": "Regex Pattern",
+    "pattern_desc": "Enter your regex pattern",
+    "test_label": "Test Text",
+    "regex_placeholder": "Enter regex pattern here...",
+    "text_placeholder": "Enter text to test...",
+    "test_button": "Test Regex",
+    "matches_title": "Matches Found: {{count}}",
+    "position": "Position: {{start}}-{{end}}",
+    "samples_title": "Common Patterns",
+    "samples_desc": "Click to copy",
+    "samples": {
+      "email": "Email",
+      "phone": "Phone",
+      "url": "URL",
+      "number": "Number",
+      "word": "Word",
+      "date": "Date"
+    },
+    "toasts": {
+      "error_title": "Error",
+      "no_pattern": "Please enter a regex pattern",
+      "success_title": "Done!",
+      "found": "{{count}} matches found",
+      "invalid": "Invalid regular expression"
+    }
+  },
+  "jwt_decoder_page": {
+    "back": "Back to Developer Tools",
+    "title": "JWT Decoder",
+    "subtitle": "Decode JWT tokens and view their contents",
+    "security_warning_title": "Security Warning",
+    "security_warning_desc": "Do not share real JWT tokens containing sensitive data. Use sample tokens only on public sites.",
+    "token_title": "JWT Token",
+    "token_desc": "Paste the token you want to decode",
+    "decode_button": "Decode JWT",
+    "header_title": "Header",
+    "header_desc": "Information about the algorithm and token type",
+    "payload_title": "Payload",
+    "payload_desc": "Data encoded in the token",
+    "signature_title": "Signature",
+    "signature_desc": "Digital signature (cannot be verified without the secret key)",
+    "copy_button": "Copy",
+    "toasts": {
+      "success_title": "Success!",
+      "success_desc": "JWT decoded successfully",
+      "copied_title": "Copied!",
+      "copied_desc": "{{type}} copied to clipboard",
+      "error": "Error decoding JWT - ensure the token is valid",
+      "invalid": "Invalid JWT token",
+      "no_token": "Please enter a JWT token",
+      "invalid_header": "Invalid JWT header",
+      "invalid_payload": "Invalid JWT payload",
+      "admin_warning": "Admin privileges token detected - verify the source",
+      "expired": "Token expired at {{date}}"
+    }
   },
   "video_trimmer_page": {
     "back": "Back to Video Tools",
@@ -421,6 +483,25 @@
       "fail_desc": "Failed to generate barcode. Check your input."
     }
   },
+  "qr_generator_page": {
+    "title": "QR Code Generator",
+    "subtitle": "Create QR codes for any text or URL",
+    "input_title": "Input",
+    "input_desc": "Enter text, URL, or any content to generate QR code",
+    "text_label": "Text or URL",
+    "text_placeholder": "Enter your text or URL here...",
+    "generate_button": "Generate QR Code",
+    "generated_title": "Generated QR Code",
+    "generated_desc": "Your QR code will appear here",
+    "download_button": "Download QR Code",
+    "placeholder": "QR code will appear here",
+    "toasts": {
+      "success_desc": "QR code generated successfully!",
+      "empty_input": "Please enter text or URL",
+      "downloaded": "QR code downloaded successfully",
+      "error_desc": "Failed to generate QR code"
+    }
+  },
   "background_remover_page": {
     "back": "Back to Image Tools",
     "title": "Background Remover",
@@ -468,6 +549,29 @@
     "copy_all": "Copy All",
     "copy_toast": "UUID copied to clipboard",
     "copy_all_toast": "All UUIDs copied to clipboard"
+  },
+  "name_generator_page": {
+    "title": "Name Generator",
+    "subtitle": "Create random names for testing and inspiration",
+    "settings": "Settings",
+    "settingsDesc": "Configure name type and output",
+    "type": "Name Type",
+    "types": {
+      "hebrew": "Hebrew",
+      "english": "English",
+      "fantasy": "Fantasy"
+    },
+    "count": "Number of Names",
+    "includeLastName": "Include Last Name",
+    "generate": "Generate Names",
+    "generated": "Generated Names",
+    "generatedDesc": "{{count}} names generated",
+    "copyAll": "Copy All",
+    "generateMore": "Generate More",
+    "clickToStart": "Click 'Generate Names' to start",
+    "success": "Names generated successfully!",
+    "copied": "Name copied to clipboard",
+    "copiedAll": "All names copied to clipboard"
   },
   "advanced_image_editor_page": {
     "title": "Advanced Image Editor",
@@ -517,6 +621,11 @@
       "copied": "Minified code copied to clipboard",
       "downloaded": "File saved"
     }
+  },
+  "css_minifier_page": {
+    "title": "CSS Minifier",
+    "subtitle": "Minify your CSS code for better performance",
+    "placeholder": "/* Paste your CSS code here */\n.button {\n  background-color: #007bff;\n  border: none;\n  color: white;\n  padding: 10px 20px;\n  font-size: 16px;\n}"
   },
   "audio_compressor_page": {
     "back": "Back to Audio Tools",
@@ -701,6 +810,19 @@
   },
   "common": {
     "explore": "Explore All Tools",
-    "moreTools": "+{{count}} more tools..."
+    "moreTools": "+{{count}} more tools...",
+    "back": "Back",
+    "back_home": "Back to Home",
+    "back_category": "Back to Category",
+    "use": "Use Tool",
+    "download": "Download",
+    "copy": "Copy",
+    "reset": "Reset",
+    "generate": "Generate",
+    "upload": "Upload",
+    "save": "Save",
+    "cancel": "Cancel",
+    "success": "Success!",
+    "error": "Error"
   }
 }
