--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -737,6 +737,7 @@
     "converting": "Converting...",
     "converted_title": "Converted File",
     "converted_desc": "Download the converted file",
+    "download_button": "Download Converted File",
     "formats_title": "Supported Formats",
     "placeholder": "Converted file will appear here",
     "toasts": {
@@ -801,6 +802,7 @@
     "merging": "Merging...",
     "merged_title": "Merged File",
     "merged_desc": "Download the merged file",
+    "download_button": "Download Merged File",
     "instructions_title": "Usage Instructions",
     "instructions": [
       "1. Upload files",
@@ -852,8 +854,12 @@
       "success_desc": "File split into {{count}} parts",
       "split_error": "Error splitting file",
       "downloaded": "Part {{index}} saved",
-      "all_downloaded": "All parts saved"
-    }
+      "all_downloaded": "All parts saved",
+      "add_point": "Added split point",
+      "processing_desc": "Splitting audio, please wait"
+    },
+    "play": "Play",
+    "pause": "Pause"
   },
   "footer": {
     "categories": "Categories",
