--- a/public/locales/he/translation.json
+++ b/public/locales/he/translation.json
@@ -421,66 +421,6 @@
       "expired": "הטוקן פג תוקף ב-{{date}}"
     }
   },
-  "regex_tester_page": {
-    "back": "חזרה לכלי מפתחים",
-    "title": "בודק ביטויים רגולריים",
-    "subtitle": "בדוק ופתח ביטויים רגולריים בקלות",
-    "pattern_title": "ביטוי רגולרי",
-    "pattern_desc": "הכנס את הביטוי הרגולרי שלך",
-    "test_label": "טקסט לבדיקה",
-    "regex_placeholder": "הכנס ביטוי רגולרי כאן...",
-    "text_placeholder": "הכנס טקסט לבדיקה...",
-    "test_button": "בדוק ביטוי רגולרי",
-    "matches_title": "התאמות שנמצאו: {{count}}",
-    "position": "מיקום: {{start}}-{{end}}",
-    "samples_title": "דוגמאות נפוצות",
-    "samples_desc": "לחץ להעתקה",
-    "samples": {
-      "email": "אימייל",
-      "phone": "טלפון",
-      "url": "URL",
-      "number": "מספר",
-      "word": "מילה",
-      "date": "תאריך"
-    },
-    "toasts": {
-      "error_title": "שגיאה",
-      "no_pattern": "אנא הכנס ביטוי רגולרי",
-      "success_title": "הושלם!",
-      "found": "נמצאו {{count}} התאמות",
-      "invalid": "ביטוי רגולרי לא תקין"
-    }
-  },
-  "jwt_decoder_page": {
-    "back": "חזרה לכלי מפתחים",
-    "title": "מפענח JWT",
-    "subtitle": "פענח טוקני JWT וצפה בתוכן שלהם",
-    "security_warning_title": "אזהרת אבטחה",
-    "security_warning_desc": "אל תשתף טוקני JWT אמיתיים המכילים מידע רגיש. השתמש בטוקנים לדוגמה בלבד באתרים ציבוריים.",
-    "token_title": "טוקן JWT",
-    "token_desc": "הדבק כאן את הטוקן שברצונך לפענח",
-    "decode_button": "פענח JWT",
-    "header_title": "Header",
-    "header_desc": "מידע על האלגוריתם וסוג הטוקן",
-    "payload_title": "Payload",
-    "payload_desc": "הנתונים המקודדים בטוקן",
-    "signature_title": "Signature",
-    "signature_desc": "החתימה הדיגיטלית (לא ניתן לאמת ללא המפתח הסודי)",
-    "copy_button": "העתק",
-    "toasts": {
-      "success_title": "הצלחה!",
-      "success_desc": "טוקן JWT פוענח בהצלחה",
-      "copied_title": "הועתק!",
-      "copied_desc": "{{type}} הועתק ללוח",
-      "error": "שגיאה בפענוח JWT - ודא שהטוקן תקין",
-      "invalid": "JWT לא תקין",
-      "no_token": "אנא הכנס טוקן JWT",
-      "invalid_header": "כותרת JWT לא תקינה - לא ניתן לפענח",
-      "invalid_payload": "תוכן JWT לא תקין - לא ניתן לפענח",
-      "admin_warning": "זוהה טוקן עם הרשאות מנהל - יש לבדוק את מקור הטוקן",
-      "expired": "הטוקן פג תוקף ב-{{date}}"
-    }
-  },
   "video_trimmer_page": {
     "back": "חזרה לכלי וידאו",
     "title": "חיתוך וידאו",
@@ -737,6 +677,7 @@
     "converting": "ממיר...",
     "converted_title": "קובץ מומר",
     "converted_desc": "הורד את הקובץ המומר",
+    "download_button": "הורד את הקובץ שהומר",
     "formats_title": "פורמטים נתמכים",
     "placeholder": "הקובץ המומר יופיע כאן",
     "toasts": {
@@ -801,6 +742,7 @@
     "merging": "מאחד...",
     "merged_title": "קובץ מאוחד",
     "merged_desc": "הורד את הקובץ המאוחד",
+    "download_button": "הורד קובץ מאוחד",
     "instructions_title": "הוראות שימוש",
     "instructions": [
       "1. העלה קבצים",
@@ -852,8 +794,12 @@
       "success_desc": "הקובץ חולק ל-{{count}} חלקים",
       "split_error": "שגיאה בחיתוך הקובץ",
       "downloaded": "חלק {{index}} נשמר",
-      "all_downloaded": "כל החלקים נשמרו"
-    }
+      "all_downloaded": "כל החלקים נשמרו",
+      "add_point": "נקודת חיתוך נוספה",
+      "processing_desc": "מפצל את הקובץ, אנא המתן"
+    },
+    "play": "נגן",
+    "pause": "הפסק"
   },
   "footer": {
     "categories": "קטגוריות",
